--- a/css/_components.gallery.scss
+++ b/css/_components.gallery.scss
@@ -38,6 +38,7 @@
       float: right;
 
       .portfolio-list-item {
+        float: right;
         display: inline-block;
         margin: 42px 16px;
       }
