--- a/css/_components.header.scss
+++ b/css/_components.header.scss
@@ -30,6 +30,7 @@
     }
 
     .nav-list-item {
+      float: right;
       margin: 42px 5px 0;
       display: inline-block;
       font-size: 18px;
