--- a/css/_elements.scss
+++ b/css/_elements.scss
@@ -19,7 +19,6 @@ ul {
   margin: 0;
   padding: 0;
   list-style: none;
-  font-size: 0;
 }
 
 a {
